@@ -1,5 +1,6 @@
 uoproxy (0.6) unstable; urgency=low
 
+  * make connect attempts non-blocking
   * support various KR/SA packets
   * reduce memory usage
 
